--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,17 @@ a {
 #qualifications--list {
   list-style: none;
 }
+#qualifications--list > li::before {
+  content: '';
+  background-image: url('/assets/icons/circle-check-regular.svg');
+  background-size: contain;
+  background-repeat: no-repeat; 
+  height: 20px; 
+  width: 20px; 
+  margin-top: -3px;
+  display: inline-block;
+  vertical-align: middle;
+}
 #wrapper--techstack__items {
   display: flex;
   flex-wrap: wrap;
@@ -169,6 +180,7 @@ a {
 .button {
   display: inline-block;
   padding: 10px 20px;
+  margin-top: 0.5em;
   background-color: #2b3031;
   border: none;
   border-radius: 4px;
