--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,12 @@
   color: var(--mainTextColor);
 }
 body {
-  animation: 1s ease-out .2s 1 fade;
-  background: radial-gradient(ellipse at bottom, var(--mainBgColor) 0%, var(--mainBgColor-dark) 100%);
+  animation: 1s ease-out 0.2s 1 fade;
+  background: radial-gradient(
+    ellipse at bottom,
+    var(--mainBgColor) 0%,
+    var(--mainBgColor-dark) 100%
+  );
 }
 p,
 span,
@@ -94,12 +98,12 @@ a {
   list-style: none;
 }
 #qualifications--list > li::before {
-  content: '';
-  background-image: url('/assets/icons/circle-check-regular.svg');
+  content: "";
+  background-image: url("/assets/icons/circle-check-regular.svg");
   background-size: contain;
-  background-repeat: no-repeat; 
-  height: 20px; 
-  width: 20px; 
+  background-repeat: no-repeat;
+  height: 20px;
+  width: 20px;
   margin-top: -3px;
   display: inline-block;
   vertical-align: middle;
@@ -117,6 +121,12 @@ a {
   align-items: center;
 }
 .card--work-history {
+  border-left: 1px solid var(--mainBorderColor);
+  margin-top: 3em;
+  margin-bottom: 3em;
+  padding-left: 2em;
+}
+.card--link--container {
   border-left: 1px solid var(--mainBorderColor);
   margin-top: 3em;
   margin-bottom: 3em;
@@ -169,12 +179,12 @@ a {
 }
 @keyframes fade {
   0% {
-      opacity: 0;
-      transform: translateY(-10px);
+    opacity: 0;
+    transform: translateY(-10px);
   }
   100% {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 .button {
